test/Constraints/add_with_nil.code
// RUN: %target-typecheck-verify-language -language-version 5

fn test(_ x: Int) -> Int {
  return x + nil
  // expected-error@-1 {{'nil' is not compatible with expected argument type 'Int'}}
}
